@@ -16,7 +16,7 @@ Package: mailman
 Architecture: any
 Pre-Depends: debconf | debconf-2.0
 Depends: ${shlibs:Depends}, ${python:Depends}, ${misc:Depends},
- logrotate, cron, ucf, pwgen, adduser, lsb-base,
+ logrotate, cron, ucf, pwgen, lsb-base,
  exim4 | mail-transport-agent, apache2 | httpd
 Suggests: spamassassin, lynx, listadmin
 XB-Python-Version: ${python:Versions}
