@@ -4,10 +4,14 @@ mailman (1:2.1.13-1) UNRELEASED; urgency=low
     - 16_update_debian (partially)
     - 30_pipermail_threads
     - 65_handle_templates_directories
+    - 77_header_folding_in_attachments
   * Remove msgfmt.py, only used at build-time (closes: #555416).
   * Recognise -loop suffix in postfix-to-mailman.py (closes: #562700).
+  * Remove adduser calls for 'list' user. Base-passwd guarantees it
+    to be available, and trying to add it if it were not present may
+    lead to inconsistencies regarding expectations for that user.
 
- -- Thijs Kinkhorst <thijs@debian.org>  Tue, 29 Dec 2009 20:32:14 +0100
+ -- Thijs Kinkhorst <thijs@debian.org>  Wed, 30 Dec 2009 16:57:26 +0100
 
 mailman (1:2.1.12-3) unstable; urgency=low
 
